// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompactPagination should handle first page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__first"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__previous"
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 3 of 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should handle last page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 1 of 3
    </div>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should handle next page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__previous"
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 2 of 3
    </div>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should handle previous page click properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__previous"
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 2 of 3
    </div>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should not render first and previous buttons on first page 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 1 of 3
    </div>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should not render next and last buttons on last page 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__first"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-first.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__previous"
      type="button"
    >
      <div
        class="sc-AxirZ fttODj"
        height="10"
        width="10"
      >
        <svg>
          back.svg
        </svg>
      </div>
    </button>
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 3 of 3
    </div>
  </div>
</DocumentFragment>
`;

exports[`CompactPagination should render properly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bpKMZT"
    data-testid="Pagination"
  >
    <div
      class="flex items-center py-3 px-5 rounded bg-theme-primary-contrast text-theme-primary"
    >
      Page 1 of 3
    </div>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__next"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          forward.svg
        </svg>
      </div>
    </button>
    <button
      class="sc-AxjAm kMuZka w-8"
      data-testid="CompactPagination__last"
      type="button"
    >
      <div
        class="sc-AxirZ hDwaov"
        height="12"
        width="12"
      >
        <svg>
          pagination-last.svg
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
